<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:fab="http://schemas.android.com/apk/res-auto"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <RelativeLayout
        android:id="@+id/content_frame"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/grey" >

        <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:fab="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <com.twotoasters.jazzylistview.JazzyListView
            android:id="@+id/list_detail_search"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/img_no_result"
            android:layout_gravity="start"
            android:layout_marginLeft="5sp"
            android:layout_marginRight="5sp"
            android:listSelector="@android:color/transparent"
            android:scrollbars="none"
            app:effect="tilt"
            app:only_animate_new_items="false"
            app:only_animate_fling="false"
            app:max_velocity="0"/>

        <com.melnykov.fab.FloatingActionButton
            android:id="@+id/fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|right"
            android:layout_margin="16dp"
            android:src="@drawable/ic_add_white"
            fab:fab_colorNormal="@color/blue"
            fab:fab_colorPressed="@color/cyan"
            fab:fab_colorRipple="@color/ripple"/>

        </FrameLayout>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/tv_no_result"
            android:id="@+id/img_no_result"
            android:layout_centerInParent="true"
            android:src="@drawable/empty"
            android:contentDescription="@string/no_result"
            android:layout_marginTop="40sp"
            android:visibility="gone"/>

        <TextView
            android:id="@+id/tv_no_result"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20sp"
            android:layout_centerInParent="true"
            android:singleLine="true"
            android:text="@string/info_no_result"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:textStyle="bold"
            android:visibility="gone" />

        <ImageView
            android:id="@+id/img_loading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/tv_no_result"
            android:layout_centerInParent="true"
            android:visibility="gone"/>

        <TextView
            android:id="@+id/tv_loading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20sp"
            android:layout_centerInParent="true"
            android:singleLine="true"
            android:text="@string/loading"
            android:layout_below="@+id/img_loading"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:textStyle="italic"
            android:visibility="gone" />

        <ImageView
            android:id="@+id/img_server_error"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/server_error"
            android:layout_above="@+id/tv_no_result"
            android:layout_centerInParent="true"
            android:visibility="gone"/>

        <TextView
            android:id="@+id/tv_server_error"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20sp"
            android:layout_centerInParent="true"
            android:singleLine="true"
            android:text="@string/info_server_error"
            android:layout_below="@+id/img_server_error"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:textStyle="italic"
            android:visibility="gone" />

        <include
            android:id="@+id/layout_footer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5sp"
            android:layout_marginRight="5sp"
            android:visibility="gone"
            layout="@layout/footer_home" />

    </RelativeLayout>

    <ListView
        android:id="@+id/left_drawer"
        android:layout_width="240sp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="@color/white"
        android:listSelector="@android:color/transparent"
        android:scrollbars="none" />

</android.support.v4.widget.DrawerLayout>